# ai-agents-bootcamp

./: config.py  main.py  pyproject.toml
experiments/: .gitignore  interview_agents_sequential.ipynb  interview_coach_pro.ipynb  questions_REA GROUP.txt  youtube_brand_alignment.ipynb
